# escroom

./: .gitignore  CMakeLists.txt  README.md  adder.c  clear_shm.sh  commons.c  commons.h  ex_client.c  ex_server.c  example.c  game.c  game.h  game_client.c  game_server.c  ipc.c  ipc.h  main.c  manager.c  messaging.c  messaging.h  mngr.c  player.c  stress.sh  test.c  test.in  test.sh  testgen.cpp  utils.c  utils.h
input/: manager.in  player-1.in  player-10.in  player-2.in  player-3.in  player-4.in  player-5.in  player-6.in  player-7.in  player-8.in  player-9.in
tests/: gentests.sh
tests/official/: player-1.in
